# ChangeLog for media-fonts/kacst-fonts
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/media-fonts/cvs-repo/gentoo-x86/media-fonts/kacst-fonts/ChangeLog,v 1.12 2008/09/24 20:00:35 loki_val Exp $

*kacst-fonts-2.0 (24 Sep 2008)

  24 Sep 2008; Peter Alfredsen <loki_val@gentoo.org>
  +kacst-fonts-2.0.ebuild:
  Bump

  24 Feb 2008; Raúl Porcel <armin76@gentoo.org> kacst-fonts-1.6.2.ebuild:
  alpha/sparc stable

  23 Jan 2008; Raúl Porcel <armin76@gentoo.org> kacst-fonts-1.6.2.ebuild:
  Add ~alpha/~sparc

  01 Jul 2007; Piotr Jaroszyński <peper@gentoo.org>
  +files/digest-kacst-fonts-1.6.2, Manifest:
  (QA) Add digests.

  29 Jun 2007; Christian Faulhammer <opfer@gentoo.org>
  kacst-fonts-1.6.2.ebuild:
  stable x86, bug 183477

  28 Jun 2007; Christoph Mende <angelos@gentoo.org>
  kacst-fonts-1.6.2.ebuild:
  Stable on amd64

  26 Nov 2006; Diego Pettenò <flameeyes@gentoo.org>
  kacst-fonts-1.6.2.ebuild:
  Add ~x86-fbsd keyword.

  11 Jul 2006; Aron Griffis <agriffis@gentoo.org> kacst-fonts-1.6.2.ebuild:
  Mark 1.6.2 stable on ia64

  26 Jul 2005; Diego Pettenò <flameeyes@gentoo.org>
  kacst-fonts-1.6.2.ebuild:
  Added to ~amd64.

  21 Jan 2005; Lars Weiler <pylon@gentoo.org> kacst-fonts-1.6.2.ebuild:
  Stable on ppc.

  17 Oct 2004; David Holm <dholm@gentoo.org> kacst-fonts-1.6.2.ebuild:
  Added to ~ppc.

*kacst-fonts-1.6.2 (02 Oct 2004)

  02 Oct 2004; Mamoru KOMACHI <usata@gentoo.org> +metadata.xml,
  +kacst-fonts-1.6.2.ebuild:
  Initial import. Ebuild submitted by Ayman Hourieh <aymanh@gmail.com>.
  Thanks to Stephen K. Benjamin <skbenja@negeko.net>.
  This closes bug #65849.
