@@ -1,6 +1,6 @@
-# Copyright 1999-2008 Gentoo Foundation
+# Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-fonts/cvs-repo/gentoo-x86/media-fonts/kacst-fonts/kacst-fonts-2.0.ebuild,v 1.1 2008/09/24 20:00:35 loki_val Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-fonts/cvs-repo/gentoo-x86/media-fonts/kacst-fonts/kacst-fonts-2.0.ebuild,v 1.2 2010/02/02 14:54:59 scarabeus Exp $
 
 inherit font
 
@@ -17,7 +17,5 @@ KEYWORDS="~alpha ~amd64 ~arm ~ia64 ~ppc ~s390 ~sh ~sparc ~x86 ~x86-fbsd"
 IUSE=""
 
 FONT_SUFFIX="ttf"
-
-DOCS="LICENSE.TXT"
 
 FONT_S=${S}
