@@ -1,6 +1,10 @@
 # ChangeLog for media-fonts/kacst-fonts
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-fonts/cvs-repo/gentoo-x86/media-fonts/kacst-fonts/ChangeLog,v 1.12 2008/09/24 20:00:35 loki_val Exp $
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/media-fonts/cvs-repo/gentoo-x86/media-fonts/kacst-fonts/ChangeLog,v 1.13 2010/02/02 14:54:59 scarabeus Exp $
+
+  02 Feb 2010; Tomáš Chvátal <scarabeus@gentoo.org>
+  kacst-fonts-2.0.ebuild:
+  We are not supposed to install LICENSE.TXT files, so drop.
 
 *kacst-fonts-2.0 (24 Sep 2008)
 
